@@ -110,8 +110,12 @@ void FtpConnection::sendRetr() const {
 
 int FtpConnection::getStatus(string response) const {
   int status;
-  // TODO we must handle when the response is not like "%d %*s"
-  // In this case, we return 0
+  // When the response is not like "%d %*s",
+  // we return 0.
+  if(response.find_first_not_of("0123456789") != 3
+     || response.find(" ") != 3) {
+    return 0;
+  }
   if(sscanf(response.c_str(), "%d %*s", &status) == 1) {
     return status;
   } else {
